--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>s</artifactId>
+  <artifactId>simple-backned</artifactId>
   <version>1.0</version>
   <packaging>war</packaging>
 
