--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
   </dependencies>
 
   <build>
-    <finalName>s</finalName>
+    <finalName>ROOT</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
